# paper_r

./: .gitignore  CLAUDE.md  EXAMPLE_ADDITIONS.md  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: paper_metadata.csv
manuscript/: main.tex  refs.bib
manuscript/figures/: README.md
manuscript/sections/: 01_introduction.tex  02_generative_models.tex  03_scarcity_mitigation.tex  04_modality_applications.tex  05_limitations.tex  06_conclusion.tex
scripts/: build_manuscript.sh  check_style.py  generate_with_api.py  parse_refs.py  validate_citations.py
src/: __init__.py  main.py
